<?xml version="1.0"?>
<package format="3">
  <name>ros2_hello_world</name>
  <version>0.0.0</version>
  <description>ROS2 Hello World Assignment</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
